[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/screens/ScreenBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/ChangeDeck/ChangeDeck.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screens/CardCreator/CardCreator.gd" type="Script" id=3]
[ext_resource path="res://ui/screens/CardCreator/components/Lines/BackLine/BackLine.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/screens/CardCreator/components/AddCard.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/screens/CardCreator/components/Delete.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/screens/CardCreator/components/Lines/FrontLine/FrontLine.tscn" type="PackedScene" id=11]

[node name="CardCreator" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MarginContainer" parent="." index="0"]
custom_constants/margin_right = 37

[node name="Content" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 24.0
margin_top = 24.0
margin_right = 780.0
margin_bottom = 640.0
custom_constants/separation = 24

[node name="ChangeDeck" parent="MarginContainer/Content" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 756.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="LineBoxes" type="ScrollContainer" parent="MarginContainer/Content" index="1"]
margin_top = 86.0
margin_right = 756.0
margin_bottom = 376.0
rect_min_size = Vector2( 756, 290 )

[node name="Content" type="VBoxContainer" parent="MarginContainer/Content/LineBoxes" index="0"]
margin_right = 756.0
margin_bottom = 290.0
custom_constants/separation = 24

[node name="FrontLine" parent="MarginContainer/Content/LineBoxes/Content" index="0" instance=ExtResource( 11 )]

[node name="BackLine" parent="MarginContainer/Content/LineBoxes/Content" index="1" instance=ExtResource( 5 )]

[node name="Space" type="Control" parent="MarginContainer/Content" index="2"]
margin_top = 400.0
margin_right = 756.0
margin_bottom = 476.0
size_flags_vertical = 3

[node name="Footer" type="MarginContainer" parent="MarginContainer/Content" index="3"]
margin_top = 500.0
margin_right = 756.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 116 )
size_flags_horizontal = 3
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30

[node name="Content" type="HBoxContainer" parent="MarginContainer/Content/Footer" index="0"]
margin_top = 30.0
margin_right = 756.0
margin_bottom = 86.0
custom_constants/separation = 12

[node name="Space" type="Control" parent="MarginContainer/Content/Footer/Content" index="0"]
margin_right = 500.0
margin_bottom = 56.0
rect_min_size = Vector2( 500, 0 )

[node name="Enter" parent="MarginContainer/Content/Footer/Content" index="1" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_right = 692.0
margin_bottom = 56.0
rect_min_size = Vector2( 180, 0 )

[node name="Delete" parent="MarginContainer/Content/Footer/Content" index="2" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 524.0
margin_right = 576.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 0 )

[node name="CongratulationsMessage" parent="." index="2"]
margin_right = 26144.0
margin_bottom = 20480.0
